Changelog
=========

2.0.1 - unreleased
------------------

- Use `zope.browserresource` if it is available.
  [hannosch]

- Converted most tests from doctests to proper unit tests.
  [hannosch]

- Fixed various native names of African languages. Added ``nd``, ``nr`` and
  ``ve`` language codes. Thanks to Dwayne Bailey and Roche Compaan.
  [hannosch]

2.0 - 2010-07-18
----------------

- Use the standard libraries doctest module.
  [hannosch]

- Update license to GPL version 2 only.
  [hannosch]

1.1b1 - 2010-01-24
------------------

- In practice the Unidecode data didn't produce good enough results for various
  languages. We therefor limit the transliteration approach again to latin-like
  languages and introduce a UNIDECODE_LIMIT. This closes
  http://dev.plone.org/plone/ticket/10107.
  [hannosch]

1.1a3 - 2009-12-27
------------------

- Use the flag of Bangladesh for the Bengali language (code: bn) in general
  and not only for the ``bn-bd`` variant. This closes
  http://dev.plone.org/plone/ticket/9950.
  [hannosch]

- Fixed the IIDNormalizer to generate valid CSS ID or Python variable names as
  specified in its docstring. It no longer tries to preserve filename
  extensions. This closes http://dev.plone.org/plone/ticket/9708.
  [hannosch]

- Added a new explicit base normalizer for Thai, as the Unidecode based
  transliteration isn't good enough.
  [hannosch]

- Added new specific normalizer for Japanese, which avoids the Unidecode based
  transliteration. This refs http://dev.plone.org/plone/ticket/9914.
  [hannosch]

1.1a2 - 2009-12-02
------------------

- Depend on and include ``Unidecode`` based transliterations. These provide
  more meaningful results than unicodedata NFKD normalizations or hex codes.
  [hannosch]

- Added cs-cz combined language code. It solves problem with default language
  on new Plone site creation (Safari/Mac).
  [naro]

- Added catalan flag. This closes
  http://dev.plone.org/plone/ticket/9540
  [ramon]
